# mavericks-magic-trackpad2

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CREDITS.md  IDEAS.md  Makefile  README.md  spike_bind.c
.githooks/: pre-push
.github/: renovate.json
.github/workflows/: release.yml
captures/: .gitignore  raw_1finger.txt  raw_2finger.txt  raw_3finger.txt
cmake/: characterize_build.sh  check_gc_neutral.sh  check_pkg_payload.sh  check_plists.sh  compat_guard.sh  dev_bluetooth_linkstated.sh  dev_kext.sh  dev_linkstated.sh  dev_name_mirror.sh  dev_prefpane_watch.sh  dev_reload.sh  dev_usb_bt_handoff.sh  fetch_10_9_sdk.sh  fetch_ed25519.sh  fetch_sparkle.sh  force_osa_rescan.sh  gen_appcast.sh  mavericks_kext.cmake  mt2_dev.cmake  mt2_pkg.cmake  pkg_no_version_check.sh  require_compiler.cmake  voodooinputmavericks_dev.cmake  voodooinputmavericks_pkg.cmake
docs/mt-stack/: battery-reporting.md  bt-decisions.md  decisions.md  device-identity-map.md  explanation.md  how-to.md  open-questions.md  prefpane-test-runthrough.md  reader-seam-map.md  reference.md  upstream-voodooinput-port.md  usb-decisions.md
docs/release-notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.4.5.md  v0.5.0.md  v0.5.1.md
examples/VoodooInputSample/: CMakeLists.txt  Info.plist.in  README.md  VoodooInputSample.cpp  VoodooInputSample.h  vinput_demo_path.c  vinput_demo_path.h
kext/: Info.plist  MT2Claim.cpp  Makefile
kext-bnbinject/: Info.plist
kext-gesture/: CMakeLists.txt  Info.plist  Info.plist.in  MT2BTReader.cpp  MT2BTReader.h  MT2Gesture.cpp  MT2Gesture.h  MT2GestureUserClient.cpp  MT2HIDShell.cpp  MT2HIDShell.h  MT2USBReader.cpp  MT2USBReader.h  Makefile  MavericksAMDTerminal.cpp  MavericksAMDTerminal.h  MavericksHIDShell.cpp  MavericksHIDShell.h  MavericksTerminalBackend.cpp  MavericksTerminalBackend.h  MavericksVoodooInput.cpp  MavericksVoodooInput.h  MavericksVoodooInputHost.cpp  MavericksVoodooInputHost.h  MavericksVoodooInputHostUserClient.cpp  VoodooInputMux.cpp  VoodooInputMux.h  amd_shim.h  bt_l2cap_shim.h  gh_default_adapter.cpp  gh_default_adapter.h  mavericks_amd_probe.cpp  mavericks_amd_probe.h  mavericks_diag.cpp  mavericks_diag.h  mavericks_log.cpp  mavericks_log.h  mavericks_splice_kext.cpp  mavericks_splice_kext.h  mt2_amd_probe.cpp  mt2_amd_probe.h  (+10 more)
kext-startmt/: Info.plist  MT2StartMT.cpp  Makefile
kext-usbclaim/: Info.plist  MT2USBClaim.cpp  Makefile
re/: README.md  amd-actuation  bcmp  calls  conn-trace  consts  disasm  hex  ioreg-class  ioreg-props  kexts  klog  mt-contacts  mt-devices  plist  str-xref  strings  syms  vtable  xref-offset
src/: CMakeLists.txt  conn_trace.c  conn_trace.h  genuine_host.c  genuine_host.h  gesture.c  gesture.h  mavericks_amd_terminal_encode.c  mavericks_amd_terminal_encode.h  mavericks_conn_trace.c  mavericks_conn_trace.h  mavericks_connect_sm.c  mavericks_connect_sm.h  mavericks_coordinator.c  mavericks_coordinator.h  mavericks_frame.h  mavericks_genuine_host.c  mavericks_genuine_host.h  mavericks_lifecycle.c  mavericks_lifecycle.h  mavericks_pipeline.c  mavericks_pipeline.h  mavericks_presence.c  mavericks_presence.h  mavericks_presence_observer.h  mavericks_session.c  mavericks_session.h  mavericks_single_load.c  mavericks_single_load.h  mavericks_splice.c  mavericks_splice.h  mavericks_stack.h  mavericks_synth_report.c  mavericks_synth_report.h  mavericks_synth_teardown.c  mavericks_synth_teardown.h  mavericks_vhid_mt1.c  mavericks_vhid_mt1.h  mavericks_voodoo_translate.cpp  mavericks_voodoo_translate.h  (+60 more)
tests/: CMakeLists.txt  char_bt_wire.cpp  test.h  test_appcast_notes.sh  test_autocheck_migration.sh  test_battery.c  test_bt_decode.c  test_cod_match.c  test_conn_trace.c  test_conn_trace_parser.sh  test_connect_sm.c  test_coordinator.c  test_decode.c  test_encode.c  test_genuine_host.c  test_geometry.c  test_gesture.c  test_install_kext_load.sh  test_kext_load_notice.sh  test_lifecycle.c  test_model.c  test_mt2_to_mt1.c  test_mt2d_run.sh  test_pane_sm.c  test_pane_watch.m  test_pipeline.c  test_preinstall_migration.sh  test_presence.c  test_re.bats  test_reader_characterization.c  test_reconnect_policy.c  test_session.c  test_session_characterization.c  test_signer_roundtrip.sh  test_single_load.c  test_splice.c  test_synth_report.c  test_synth_teardown.c  test_usb_bytes.c  test_usb_engine_equivalence.c  (+7 more)
tools/: CMakeLists.txt  ORACLES.md  bt_inject_personality.c  build_bnbinject.sh  click_monitor.c  demo_scroll.c  demo_signature.c  diag.c  dump_frames.c  feed_probe.c  genuine_mt2_geometry.sh  iter_tap.sh  kc_carve.c  kc_lzss.c  macho_rebase.c  mt2_amd_oracle  mt2_battery_probe.c  mt2_bluetooth_linkstated.m  mt2_bt_bounce.m  mt2_cod_match.h  mt2_gesture_feed.c  mt2_hidnode_probe.c  mt2_linkstated.m  mt2_name-runbook.md  mt2_name_probe  mt2_name_probe.c  mt2_oob_capture-runbook.md  mt2_oob_capture.sh  mt2_panebattery_probe.m  mt2_reconnect_policy.h  mt2_reenumerate.c  mt2_set_btname.m  mt2_synth_inject.c  mt2_usb_bt_handoff.m  mt2_usb_enable.c  mt2_verify_prefpane.sh  mt_contacts.c  mt_default.c  mt_force_start.c  mt_frames_probe.c  (+25 more)
tools/mt2_prefpane_refresh/: Info.plist  SIMBL-Info.plist  mt2_pane_arm.c  mt2_pane_watch.m  mt2_prefpane_refresh.c  mt2_presence_observer.c
tools/mt2_sign_update/: generate_keys.c  mt2_b64.h  sign_update.c
tools/mt2_updater/: Info.plist.in  main.m
tools/spikes/: README.md  bt_powercycle.m  bt_unpair.m  pipe_debug.c  send_mouse.c  uhe_reach_probe.m  verify_migration.sh  vhid_query_probe.c
tools/voodooinputmavericks_prefpane/: Info.plist  SIMBL-Info.plist  mavericks_presence_observer.c  voodooinputmavericks_pane_arm.c  voodooinputmavericks_pane_watch.m  voodooinputmavericks_prefpane_refresh.c
tools/voodooinputmavericks_updater/: ICON-CREDIT.txt  MavericksTrackpad2Updater.icns  Trackpad2Updater.icns
